WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197890
[WHLSL] parseEffectfulAssignment should not call parseCallExpression directly
https://bugs.webkit.org/show_bug.cgi?id=197890
Summary
[WHLSL] parseEffectfulAssignment should not call parseCallExpression directly
Robin Morisset
Reported
2019-05-14 12:04:33 PDT
callExpression already appears in effSuffix which is in effPrefix which is in effAssignment, so having it directly in effAssignment as well is useless (and ambiguous). I've already fixed the grammar, this patch is fixing the parser.
Attachments
Patch
(1.52 KB, patch)
2019-05-14 12:08 PDT
,
Robin Morisset
mmaxfield
: review+
Details
Formatted Diff
Diff
Patch for landing
(1.66 KB, patch)
2019-05-14 12:35 PDT
,
Robin Morisset
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(1.63 KB, patch)
2019-05-14 12:55 PDT
,
Robin Morisset
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Robin Morisset
Comment 1
2019-05-14 12:08:37 PDT
Created
attachment 369879
[details]
Patch
Myles C. Maxfield
Comment 2
2019-05-14 12:16:23 PDT
I think we can test this patch. If the program fails to parse, the JS call should return null.
Myles C. Maxfield
Comment 3
2019-05-14 12:24:16 PDT
Comment on
attachment 369879
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=369879&action=review
> Source/WebCore/ChangeLog:9 > + I've already fixed the grammar, this patch is fixing the parser.
Let's link to the associated grammar fix and spec fix.
Robin Morisset
Comment 4
2019-05-14 12:35:44 PDT
Created
attachment 369882
[details]
Patch for landing Added link in the changelog.
WebKit Commit Bot
Comment 5
2019-05-14 12:38:15 PDT
Comment on
attachment 369882
[details]
Patch for landing Rejecting
attachment 369882
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 369882, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=369882&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=197890
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Processing patch 369882 from
bug 197890
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=369882
Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog patch: **** malformed patch at line 22: Video frame resizing should be using Trim patching file Source/WebCore/Modules/webgpu/WHLSL/WHLSLParser.cpp Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Full output:
https://webkit-queues.webkit.org/results/12190332
Robin Morisset
Comment 6
2019-05-14 12:55:30 PDT
Created
attachment 369884
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2019-05-14 13:35:38 PDT
Comment on
attachment 369884
[details]
Patch for landing Clearing flags on attachment: 369884 Committed
r245302
: <
https://trac.webkit.org/changeset/245302
>
WebKit Commit Bot
Comment 8
2019-05-14 13:35:40 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2019-05-14 13:36:21 PDT
<
rdar://problem/50780514
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug